# offle-assistant

./: .gitignore  README.md  alembic.ini  notes-to-self.md  pyproject.toml
alembic/: env.py
alembic/versions/: 957f327847ec_initial_migration.py
assistant/: main.py
assistant/bot/: __init__.py  _bot.py  _doc_bot.py
assistant/formatting/: _formatting.py
assistant/persona/: _persona.py
backend/: pyproject.toml
backend/docker/mongodb/: docker-compose.yaml
backend/docker/ollama/: docker-compose.yaml
backend/docker/qdrant/: docker-compose.yml
backend/docker/redis/: docker-compose.yml
backend/offle_assistant/: constants.py  dependencies.py  main.py  mongo.py
backend/offle_assistant/auth/: __init__.py  _deps.py  _utils.py
backend/offle_assistant/cli/: _chat_command.py  _rag_command.py
backend/offle_assistant/config/: _config.py
backend/offle_assistant/custom_logging/: __init__.py  _logging_config.py
backend/offle_assistant/database/: __init__.py  _crud.py  _files.py  _groups.py  _language_models.py  _message_histories.py  _personas.py  _queries.py  _users.py
backend/offle_assistant/llm_client/: _llm_client.py
backend/offle_assistant/logging/: _logging_config.py
backend/offle_assistant/models/: __init__.py  _auth.py  _common_utils.py  _files.py  _groups.py  _language_models.py  _messages.py  _persona.py  _rag.py  _user.py
backend/offle_assistant/persona/: __init__.py  _persona.py
backend/offle_assistant/routes/v1/: __init__.py  _admin.py  _auth.py  _documents.py  _groups.py  _language_models.py  _message_history.py  _personas.py  _users.py  routes.py
backend/offle_assistant/schemas/: __init__.py
backend/offle_assistant/session_manager/: __init__.py  _session_manager.py
backend/offle_assistant/text_processing/: __init__.py
backend/offle_assistant/utils/: __init__.py  _available_models.py
backend/offle_assistant/vector_db/: __init__.py  _vector_db.py
backend/offle_assistant/vector_math/: __init__.py
backend/offle_assistant/vectorizer/: __init__.py  _vectorizer_lookup.py
backend/tests/configs/: test_config.yaml
backend/tests/pytests/integration/rest-api/: test_admin.py
backend/tests/pytests/integration/rest_api/: common.py  conftest.py  test_admin.py  test_auth.py  test_documents.py  test_groups.py  test_message_history.py  test_personas.py  test_users.py
backend/tests/pytests/unit/: conftest.py  test_gridfs.py  test_personas.py
backend/tests/pytests/unit/database/: conftest.py  test_gridfs.py  test_gridfs.py_cp
backend/tests/pytests/unit/database/test_data/: test_file.txt
backend/tests/rest_api/: delete_user.sh  message.sh  message_ralph.sh  notes.txt  update_user.sh
backend/tests/rest_api/auth/: chat_persona.sh  create_persona.sh  delete_user.sh  get_persona_by_id.sh  get_persona_dict.sh  login.sh  promote_user.sh  update_persona.sh
docker/postgres/: docker-compose.yml
docs/: rest-api.md
docs/rest-api/: admin.md  auth.md  personas.md  users.md
docs/testing/: README.md
frontend/offle-assistant/: package-lock.json  package.json
offle_assistant/: database.py  dependencies.py  main.py
offle_assistant/cli/: __init__.py  _chat_command.py  _cli.py  _config_command.py  _persona_command.py  _rag_command.py
offle_assistant/config/: __init__.py  _config.py
offle_assistant/formatting/: __init__.py  _formatting.py
offle_assistant/llm_client/: __init__.py  _llm_client.py
offle_assistant/models/: __init__.py  _common_utils.py  _persona.py  _rag.py  _user.py  models.py
offle_assistant/persona/: __init__.py  _persona.py
offle_assistant/rag/: __init__.py  _preprocess_docs.py  _qdrant.py  _rag.py
offle_assistant/schemas/: __init__.py  _schemas.py
offle_assistant/session_manager/: _session_manager.py
tar_assistant/: main.py
(+37 files in other folders)
