[project]
name = "offle_assistant"
version = "0.1.0"
description = "A simple framework to build offline chatbots."
authors = [
    {name = "beatoven9",email = "reeedt@gmail.com"}
]
packages = [
    {include = "offle_assistant"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "ollama (>=0.4.5,<0.5.0)",
    "llama-index (>=0.12.9,<0.13.0)",
    "prompt-toolkit (>=3.0.48,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "pymupdf4llm (>=0.0.17,<0.0.18)"
]

[tool.poetry.scripts]
offle_assistant = "offle_assistant.main:main"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
