[project]
name = "offle_assistant"
version = "0.1.0"
description = "A simple framework to build offline chatbots."
authors = [
    {name = "beatoven9",email = "reeedt@gmail.com"}
]
packages = [
    {include = "offle_assistant"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "ollama (>=0.4.5,<0.5.0)",
    "prompt-toolkit (>=3.0.48,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "qdrant-client (>=1.13.2,<2.0.0)",
    "pypandoc-binary (>=1.15,<2.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
]

[tool.poetry.scripts]
offle_assistant = "offle_assistant.main:start"
offle_assistant_cli = "offle_assistant.cli._cli:main"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
